# agentic-todo-system

./: README.md
phase-1/: README.md  USAGE.md  setup.py  test_todos.json  todo_app.py  todos.json
phase-1/.claude/: settings.local.json
phase-2/: .gitignore
phase-2/backend/: DEPENDENCIES_INSTALLED.txt  README.md  RESOLVE_EMAIL_SETUP.md  create_sample_user.py  main.py  migrate_label_field.py  pyproject.toml  requirements.txt  reset_sample_user.py  test_email_config.py  verify_migration.py
phase-2/backend/models/: models.py
phase-2/backend/routes/auth/: auth.py
phase-2/backend/routes/users/: users.py
phase-2/backend/schemas/: auth_schemas.py
phase-2/backend/tests/: test_async_registration.py
phase-2/backend/utils/: email_utils.py
phase-2/frontend/: README.md  package.json
phase-3/backend/: CLAUDE.md  init_conversation_tables.py  main.py  migrate_label_field_fixed.py  pyproject.toml  requirements.txt  test_email_config.py  test_full_flow.py
phase-3/docs/: realtime_updates_implementation_guide.md
phase-3/frontend/: CLAUDE.md  next.config.js  package-lock.json  package.json  tsconfig.json
phase-4/: CLAUDE.md  TESTING_PHASE4_CLOUD_NATIVE_DEVOPS_CORRECTED.md  backend.yaml  debug-notes.md
phase-4/ai-devops/: kagent-config.yaml  kagent-deployment.yaml  kubectl-ai-config.ini  monitoring-config.yaml
phase-4/backend/: Dockerfile  init_db.py  main.py  test_resend.py  websocket_manager.py
phase-4/docs/: vercel_deployment_guide.md
phase-4/frontend/: DEPENDENCIES_INSTALLED.txt  Dockerfile  next.config.js  package-lock.json  tailwind.config.js
(+358 files in other folders)
